# ComfyUI-GPT

./: LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
client/: constants.js  index.js
client/components/: app.js  chatBox.js
client/components/chat/: chatFooter.js  chatHeader.js  chatMessage.js
client/hooks/: useDraggable.js
client/services/: WorkflowService.js
client/styles/: main.css
knowledges/rules/: PROMPT.md
router/: app.py
service/: __init__.py  chat_gpt.py  llm_gpt.py
web/: gpt-extension.js  index.js
web/extension/: gpt-extension.js
