[project]
name = "gpt"
description = "Help comfy deisgner develope custom nodes by foreground GUI without any coding knowledge, complementing the workflow what you design with LLM automatically"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/moose-lab/ComfyUI-GPT"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-GPT"
Icon = ""
